Revert change to Wizard.set